--- a/index.html
+++ b/index.html
@@ -32,8 +32,8 @@
         <div class="title">
           <div id="main"></div>
         </div>
-        <div class="title-main">I'm Alexander Lekomtsev, a <span class="Link">frontend developer</span><br> And <span
-            class="Link">UX/UI designer.</span></div>
+        <div class="title-main">I'm Alexander Lekomtsev, an <span class="Link">UX/UI - designer</span><br> 
+            From Russia, <span class="Link">Tver</span></div>
       </h1>
 
       <div class="contact">
