--- a/index.html
+++ b/index.html
@@ -9,7 +9,9 @@
   <title>Alexander Lekomtsev — Developer</title>
   <link rel="shortcut icon" href="icon.png" type="image/png">
   <meta name="description" content="I'm Alexander Lekomtsev, a frontend developer and UX/UI designer">
-  <link href="https://fonts.googleapis.com/css?family=Montserrat&display=swap" rel="stylesheet" />
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap" rel="stylesheet">
   <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/2.0.2/TweenMax.min.js"></script>
 
   <script src="https://cdn.rawgit.com/bradley/Blotter/master/build/blotter.min.js"></script>
