--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Alexander Lekomtsev — Developer</title>
+  <title>Alexander Lekomtsev — Designer</title>
   <link rel="shortcut icon" href="icon.png" type="image/png">
   <meta name="description" content="I'm Alexander Lekomtsev, a frontend developer and UX/UI designer">
   <link rel="preconnect" href="https://fonts.googleapis.com">
