--- a/index.html
+++ b/index.html
@@ -46,14 +46,6 @@
             <i class="iconify icon:bx:bxl-vk icon-inline:false"></i>
           </a>
 
-          <a href="https://twitter.com/Flitay_" target="_blank">
-            <i class="iconify icon:ant-design:twitter-outlined icon-inline:false"></i>
-          </a>
-
-          <a href="https://soundcloud.com/flitay" target="_blank">
-            <i class="iconify icon:cib:soundcloud icon-inline:false"></i>
-          </a>
-
           <a href="https://www.instagram.com/flitays/" target="_blank">
             <i class="iconify icon:ant-design:instagram-filled icon-inline:false"></i>
           </a>
@@ -68,6 +60,10 @@
 
           <a href="https://career.habr.com/flitay" target="_blank">
             <i class="iconify hubr icon-inline:false" data-icon="cib:habr"></i>
+          </a>
+
+          <a href="https://www.behance.net/flitay" target="_blank">
+            <i class="iconify icon:akar-icons:behance-fill icon-inline:false"></i>
           </a>
 
         </div>
