--- a/index.html
+++ b/index.html
@@ -55,17 +55,17 @@
           </a>
 
           <a href="https://github.com/Flitays" target="_blank">
-            <i class="iconify icon:ant-design:github-filled icon-inline:false"></i>
+            <i class="iconify icon:mingcute:github-fill icon-inline:false"></i>
           </a>
 
           <a href="https://career.habr.com/flitay" target="_blank">
-            <i class="iconify hubr icon-inline:false" data-icon="cib:habr"></i>
+            <i class="iconify icon:simple-icons:habr icon-inline:false"></i>
           </a>
 
           <a href="https://www.behance.net/flitay" target="_blank">
             <i class="iconify icon:akar-icons:behance-fill icon-inline:false"></i>
           </a>
-
+          
         </div>
 
         <p class="contact-subtitle">
