--- a/index.html
+++ b/index.html
@@ -45,6 +45,10 @@
           <a href="https://vk.com/flitay" target="_blank">
             <i class="iconify icon:bx:bxl-vk icon-inline:false"></i>
           </a>
+          
+          <a href="https://www.instagram.com/flitays/" target="_blank">
+            <i class="iconify icon:icon-park-outline:telegram icon-inline:false"></i>
+          </a>
 
           <a href="https://www.instagram.com/flitays/" target="_blank">
             <i class="iconify icon:ant-design:instagram-filled icon-inline:false"></i>
