--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
             <i class="iconify icon:bx:bxl-vk icon-inline:false"></i>
           </a>
           
-          <a href="https://www.instagram.com/flitays/" target="_blank">
+          <a href="https://t.me/Flitay" target="_blank">
             <i class="iconify icon:icon-park-outline:telegram icon-inline:false"></i>
           </a>
 
